crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__alternation_capture_with_type.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = [(identifier) (number)] @value :: Value
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Alt
        BracketOpen "["
        Branch
          Tree
            ParenOpen "("
            Id "identifier"
            ParenClose ")"
        Branch
          Tree
            ParenOpen "("
            Id "number"
            ParenClose ")"
        BracketClose "]"
      CaptureToken "@value"
      Type
        DoubleColon "::"
        Id "Value"
