crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__capture_literal.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = "foo" @keyword
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Str
        DoubleQuote "\""
        StrVal "foo"
        DoubleQuote "\""
      CaptureToken "@keyword"
