crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__capture_literal_in_tree.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = (binary_expression "+" @op)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "binary_expression"
      Capture
        Str
          DoubleQuote "\""
          StrVal "+"
          DoubleQuote "\""
        CaptureToken "@op"
      ParenClose ")"
