crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__capture_literal_with_quantifier.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = ","* @commas
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Quantifier
        Str
          DoubleQuote "\""
          StrVal ","
          DoubleQuote "\""
        Star "*"
      CaptureToken "@commas"
