crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__capture_literal_with_type.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = "return" @kw :: string
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Str
        DoubleQuote "\""
        StrVal "return"
        DoubleQuote "\""
      CaptureToken "@kw"
      Type
        DoubleColon "::"
        Id "string"
