crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__capture_nested.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = (call function: (identifier) @func)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "call"
      Capture
        Field
          Id "function"
          Colon ":"
          Tree
            ParenOpen "("
            Id "identifier"
            ParenClose ")"
        CaptureToken "@func"
      ParenClose ")"
