crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__capture_with_custom_type.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = (function_declaration) @fn :: FunctionDecl
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Tree
        ParenOpen "("
        Id "function_declaration"
        ParenClose ")"
      CaptureToken "@fn"
      Type
        DoubleColon "::"
        Id "FunctionDecl"
