crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__capture_with_type_no_spaces.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = (identifier) @name::string
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Tree
        ParenOpen "("
        Id "identifier"
        ParenClose ")"
      CaptureToken "@name"
      Type
        DoubleColon "::"
        Id "string"
